# logkiss

./: .env.example  .gitignore  .readthedocs.yaml  .readthedocs.yml  .windsurfrules  BACKLOG.md  CHANGELOG.md  CONFIG.md  LICENSE  README.md  README_JAPANESE.md  TODO.md  config_JAPANESE.md  mkdocs.yml  pyproject.toml  pytest.ini  test_readme_snippets.py  tox.ini
.github/workflows/: test.yml
docs/: contributing.md  index.md  installation.md  requirements.txt  usage.md
docs/api/: handlers.md
docs/en/: contributing.md  examples.md  index.md  usage.md
docs/en/api/: logkiss.md
docs/ja/: contributing.md  index.md  installation.md  usage.md
docs/ja/api/: handlers.md  logkiss.md
docs/zh/: index.md  installation.md  usage.md
docs/zh/api/: handlers.md  logkiss.md
examples/: README.md  README_JAPANESE.md  ansi_color_demo.py  basic_logging.py  color_demo.py  console_handler_example.py  custom_color_config.yaml  default_console_handler.py  direct_color_config.py  disable_color.py  examples.md  examples_JAPANESE.md  examples_testcase.md  exp_root_handlers.py  file_logging.py  hello.py  matplot_example.py  minimal_warning.py  multi_logger.py  quickstart_1.py  quickstart_1_standard.py  quickstart_2.py  quickstart_2_standard.py  quickstart_3.py  quickstart_3_standard.py  sample.py  sample_aws.py  sample_aws_fixed.py  sample_config.py  sample_config_2.py  sample_exception.py  sample_exception_aws.py  sample_exception_gcp.py  sample_existing_logger.py  sample_file_logging.py  sample_gcloud_handler.py  sample_gcp.py  sample_gcp_fixed.py  sample_matplot_debug_log.py  sample_multi_logger.py  (+10 more)
examples/config/: config_color_test2.py  config_color_test2.yaml  dict_config_example.py  funky_colors.yaml  logging_config.yaml  reversed_levels.yaml  reversed_levels_example.py  test_config1.py
examples/poc/: poc2_integration_B.py  poc3_hierarchy_test.py  poc4_inplace_update_test.py  sample3.py
examples/sandbox/: sandbox_a.py
logkiss/: __init__.py  config.py  handler_aws.py  handler_gcp.py  handler_qt.py  handlers.py  logkiss.py
mytest/: a.py  a2.py
sandbox/: a.py  alternative_config.yaml  custom_color_config.yaml  debug_color_config.py  debug_color_settings.py  test.yaml  test_config_switch.py  test_dictconfig_JAPANESE.py  test_quickstart_1.py  test_quickstart_2.py  test_quickstart_3.py  test_warning_color_JAPANESE.py
scripts/: cleanup_workflow_runs.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/handlers/: index.html
site/api/logkiss/: index.html
site/contributing/: index.html
site/en/: index.html
site/en/api/handlers/: index.html
site/en/api/logkiss/: index.html
site/en/contributing/: index.html
site/en/examples/: index.html
site/en/installation/: index.html
site/en/usage/: index.html
site/examples/: index.html
site/installation/: index.html
site/ja/: index.html
site/ja/api/handlers/: index.html
site/ja/api/logkiss/: index.html
site/ja/contributing/: index.html
site/ja/en/: index.html
site/ja/en/api/handlers/: index.html
site/ja/en/api/logkiss/: index.html
site/ja/en/contributing/: index.html
site/ja/en/examples/: index.html
site/ja/en/installation/: index.html
site/ja/en/usage/: index.html
site/ja/examples/: index.html
site/ja/installation/: index.html
site/ja/ja/: index.html
site/ja/ja/api/handlers/: index.html
site/ja/ja/api/logkiss/: index.html
site/ja/ja/contributing/: index.html
site/ja/ja/examples/: index.html
site/ja/ja/installation/: index.html
site/ja/ja/usage/: index.html
site/ja/usage/: index.html
site/ja/zh/: index.html
site/ja/zh/api/handlers/: index.html
site/ja/zh/api/logkiss/: index.html
site/ja/zh/installation/: index.html
site/ja/zh/usage/: index.html
site/search/: search_index.json
site/usage/: index.html
site/zh/: index.html
site/zh/api/handlers/: index.html
site/zh/api/logkiss/: index.html
site/zh/contributing/: index.html
site/zh/en/: index.html
site/zh/en/api/handlers/: index.html
site/zh/en/api/logkiss/: index.html
site/zh/en/contributing/: index.html
site/zh/en/examples/: index.html
site/zh/en/installation/: index.html
site/zh/en/usage/: index.html
site/zh/examples/: index.html
site/zh/installation/: index.html
site/zh/ja/: index.html
site/zh/ja/api/handlers/: index.html
site/zh/ja/api/logkiss/: index.html
site/zh/ja/contributing/: index.html
site/zh/ja/examples/: index.html
site/zh/ja/installation/: index.html
site/zh/ja/usage/: index.html
site/zh/usage/: index.html
site/zh/zh/: index.html
site/zh/zh/api/handlers/: index.html
site/zh/zh/api/logkiss/: index.html
site/zh/zh/installation/: index.html
site/zh/zh/usage/: index.html
tests/: README.md  __init__.py  conftest.py  test_aws_handler_mock.py  test_aws_log.py  test_basic.py  test_config.py  test_config_cases.py  test_config_cases_english.py  test_console_handler.py  test_env_vars.py  test_gcp_handler_mock.py  test_gcp_logging.py  test_handlers.py  test_logkiss.py  test_module_api.py  test_platform.py  test_simple.py  test_structured_log.py
