[project]
name = "logkiss"
version = "2.2.0"
description = "A Simple and Colorful Python Logging Library"
authors = [
    {name = "Taka Suzuki", email = "tkykszk@gmail.com"}
]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["logging", "color", "console", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/yourusername/logkiss"
Repository = "https://github.com/yourusername/logkiss"
Documentation = "https://github.com/yourusername/logkiss/blob/main/README.md"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "matplotlib>=3.7.0",
]
cloud = [
    "google-cloud-logging>=3.9.0",
    "boto3>=1.34.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"
src-layout = false

[tool.pdm.build]
includes = ["logkiss"]
excludes = ["tests"]
package-dir = "."

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tox>=4.0",
]
lint = [
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings>=0.23.0",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-autorefs>=0.5.0",
]

[tool.pdm.scripts]
docs-serve = {cmd = "mkdocs serve"}
docs-build = {cmd = "mkdocs build"}
docs-deploy = {cmd = "mkdocs gh-deploy --force"}

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=logkiss --cov-report=html --cov-report=term-missing -v"
